--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "luxon": "^3.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
-    "markdown-it-attrs": "^4.1.4",
+    "markdown-it-image-figures": "^2.1.1",
     "speedlify-score": "^2.0.2"
   },
   "devDependencies": {
