--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "eleventy-plugin-embed-everything": "^1.17.0",
     "eleventy-plugin-lazyimages": "^2.1.2",
     "eleventy-plugin-nesting-toc": "^1.3.0",
     "eleventy-plugin-toc": "^1.1.5",
