--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": ".eleventy.js",
   "scripts": {
-    "start": "npx eleventy --serve",
+    "dev": "npx eleventy --serve",
     "build": "npx @11ty/eleventy"
   },
   "keywords": [],
