--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": ".eleventy.js",
   "scripts": {
     "dev": "npx eleventy --serve",
-    "build": "npx @11ty/eleventy"
+    "build": "npx @11ty/eleventy",
+    "preview": "npx @11ty/eleventy --serve --port=8081"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,6 @@
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
     "eleventy-plugin-embed-everything": "^1.17.0",
-    "eleventy-plugin-lazyimages": "^2.1.2",
     "eleventy-plugin-nesting-toc": "^1.3.0",
     "eleventy-plugin-toc": "^1.1.5",
     "luxon": "^3.1.0",
