--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "luxon": "^3.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
-    "markdown-it-image-figures": "^2.1.1",
-    "speedlify-score": "^2.0.2"
+    "markdown-it-image-figures": "^2.1.1"
   },
   "devDependencies": {
     "@11ty/eleventy-cache-assets": "^2.3.0",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@quasibit/eleventy-plugin-schema": "^1.11.0"
+    "@quasibit/eleventy-plugin-schema": "^1.11.0",
+    "eleventy-plugin-og-image": "^2.1.1"
   }
 }
