--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "eleventy-plugin-embed-everything": "^1.18.2",
     "eleventy-plugin-toc": "^1.1.5",
     "luxon": "^3.4.4",
