--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "eleventy",
   "main": ".eleventy.js",
+  "type": "module",
   "scripts": {
     "dev": "npx eleventy --serve --quiet",
     "build": "npx @11ty/eleventy",
     "preview": "npx @11ty/eleventy --serve --port=8081"
   },
   "dependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "eleventy-plugin-embed-everything": "^1.18.2",
+    "eleventy-plugin-og-image": "^4.0.1",
     "eleventy-plugin-toc": "^1.1.5",
     "luxon": "^3.4.4",
     "markdown-it": "^14.1.0",
-    "markdown-it-anchor": "^8.6.7",
+    "markdown-it-anchor": "^9.2.0",
     "markdown-it-image-figures": "^2.1.1"
   },
   "devDependencies": {
-    "@11ty/eleventy-cache-assets": "^2.3.0",
-    "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@quasibit/eleventy-plugin-schema": "^1.11.0",
-    "eleventy-plugin-og-image": "^2.1.2"
+    "@11ty/eleventy-plugin-rss": "^2.0.2",
+    "@quasibit/eleventy-plugin-schema": "^1.11.0"
   }
 }
