--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "eleventy-plugin-embed-everything": "^1.18.2",
-    "eleventy-plugin-img-magnifier": "file:../eleventy-plugin-img-magnifier",
+    "eleventy-plugin-img-magnifier": "^1.0.4",
     "eleventy-plugin-og-image": "^4.0.1",
     "eleventy-plugin-toc": "^1.1.5",
     "luxon": "^3.4.4",
